Resolve the flicker while switching between graphs

--- a/app/assets/stylesheets/modules/_user_profiles.styl
+++ b/app/assets/stylesheets/modules/_user_profiles.styl
@@ -148,6 +148,9 @@
 					.button
 						border-radius 10px
 						padding 3px 0 8px
+				#visualizations
+					height 400px
+					width 800px
 
 	#course-details
 		padding-top 30px
